--- a/src/assets/styles/MainEntry.global.scss
+++ b/src/assets/styles/MainEntry.global.scss
@@ -8,6 +8,10 @@
 
 	-webkit-user-select: none;
 	user-select: none;
+	
+	-webkit-font-smoothing: subpixel-antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-smooth: always;
 }
 
 .fill-height {
