--- a/src/assets/templates/AppEntry.jade
+++ b/src/assets/templates/AppEntry.jade
@@ -24,7 +24,7 @@ html(lang="en")
 
 
 		meta(name="viewport",content="width=device-width, initial-scale=1")
-		title epictask
+		title!=""
 		script.
 			//noinspection NodeModulesDependencies
 			var isDev = "#{htmlWebpackPlugin.options.isDev}" === 'true'
@@ -38,6 +38,25 @@ html(lang="en")
 	body.fill-width.fill-height()
 		#root
 		#loader-root
+
+		// GOOGLE ANALYTICS
+		script.
+
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject'] = r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			(function () {
+				'use strict';
+				let ElectronCookies = require('@exponent/electron-cookies');
+				ElectronCookies.enable({origin: 'https://www.epictask.run'});
+
+				ga('create', 'UA-86081710-1', 'auto');
+				ga('set', 'location', 'https://www.epictask.run');
+				ga('set', 'checkProtocolTask', null);
+				ga('send', 'pageview');
+			})();
 
 
 
