--- a/packages/epic-assets/styles/tooltips.scss
+++ b/packages/epic-assets/styles/tooltips.scss
@@ -9,3 +9,10 @@
 		border-top: 0 !important;
 	}
 }
+
+.formErrorTooltip {
+	max-width: 50vw;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
