fixed command manager commands

--- a/packages/epic-assets/styles/MainEntry.global.scss
+++ b/packages/epic-assets/styles/MainEntry.global.scss
@@ -1,6 +1,7 @@
 @import "mixins.global";
 @import 'github-markdown';
 @import "tooltips";
+@import "elements";
 
 * {
 	box-sizing: border-box;
@@ -160,3 +161,5 @@ body {
 		opacity: 1;
 	}
 }
+
+
