--- a/packages/epic-assets/styles/elements.scss
+++ b/packages/epic-assets/styles/elements.scss
@@ -2,27 +2,27 @@
 /**
 	A focusable element
  */
-.focusable {
-	position: relative;
-	
-	&:after {
-		
-		content: ' ';
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		box-shadow: none;
-		pointer-events: none;
-	}
-	
-	&:focus {
-		&:after {
-			box-shadow: 0 0 1rem 0.3rem rgba(0, 145, 234,0.9) inset;
-		}
-	}
-}
+//.focusable {
+//	position: relative;
+//
+//	&:after {
+//
+//		content: ' ';
+//		position: absolute;
+//		top: 0;
+//		left: 0;
+//		bottom: 0;
+//		right: 0;
+//		box-shadow: none;
+//		pointer-events: none;
+//	}
+//
+//	&:focus {
+//		&:after {
+//			box-shadow: 0 0 1rem 0.3rem rgba(0, 145, 234,0.9) inset;
+//		}
+//	}
+//}
 
 :focus {
 	position: relative;
@@ -35,6 +35,6 @@
 		right: 0;
 		z-index: 999999;
 		pointer-events: none;
-		box-shadow: 0 0 1rem 0.3rem rgba(0, 145, 234,0.9) inset;
+		box-shadow: 0 0 0.6rem 0.2rem rgba(0, 145, 234,0.9) inset;
 	}
 }
