--- a/packages/epic-assets/styles/split-pane.global.scss
+++ b/packages/epic-assets/styles/split-pane.global.scss
@@ -37,7 +37,8 @@
 	}
 
 	&.horizontal {
-		height: 1.1rem;
+		//height: 1.1rem;
+		height: 1rem;
 		margin: -0.5rem 0;
 		border-top-width: 0.5rem;
 		border-top-style: solid;
@@ -58,7 +59,8 @@
 	}
 
 	&.vertical {
-		width: 1.1rem;
+		//width: 1.1rem;
+		width: 1rem;
 		margin: 0 -0.5rem;
 		border-left-width: 0.5rem;
 		border-left-style: solid;
