added sound files
FINALLY created a simple tooltip construct that will in the future be a base for a complex component based solution

--- a/packages/epic-assets/templates/BrowserEntry.jade
+++ b/packages/epic-assets/templates/BrowserEntry.jade
@@ -9,6 +9,7 @@ html(lang="en")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
 		style!=fontStyles
 		//style!=mainStyles
+		style!=eval(require('!!css-loader!balloon-css/balloon.min.css'))
 		style!=eval(require('!!css-loader!sass-loader!styles/split-pane.global.scss'))
 		style!=eval(require('!!css-loader!animate.css/animate.css'))
 		style!=eval(require('!!css-loader!font-awesome/css/font-awesome.min.css'))
