before remove material-ui

--- a/packages/epic-assets/templates/BrowserEntry.jade
+++ b/packages/epic-assets/templates/BrowserEntry.jade
@@ -20,7 +20,7 @@ html(lang="en")
 		// Splash screen load
 		script!=require('!!raw-loader!./BrowserEntry.js')
 		meta(name="viewport",content="width=device-width, initial-scale=1")
-		title!=""
+		title!="Epictask"
 
 	body.fill-width.fill-height
 		#root
