--- a/src/renderer/assets/css/global.scss
+++ b/src/renderer/assets/css/global.scss
@@ -21,13 +21,15 @@ div[role=tooltip] {
 
 /* Turn on custom 8px wide scrollbar */
 ::-webkit-scrollbar {
-	width: 8px; /* 1px wider than Lion. */
-	/* This is more usable for users trying to click it. */
-	background-color: rgba(0,0,0,0);
-	-webkit-border-radius: 100px;
+	display: none;
+	//width: 8px; /* 1px wider than Lion. */
+	///* This is more usable for users trying to click it. */
+	//background-color: rgba(0,0,0,0);
+	//-webkit-border-radius: 100px;
 }
 /* hover effect for both scrollbar area, and scrollbar 'thumb' */
 ::-webkit-scrollbar:hover {
+	display: none;
 	background-color: rgba(0, 0, 0, 0.09);
 }
 
@@ -35,10 +37,12 @@ div[role=tooltip] {
 ::-webkit-scrollbar-thumb:vertical {
 	/* This is the EXACT color of Mac OS scrollbars.
 		 Yes, I pulled out digital color meter */
-	background: rgba(0,0,0,0.5);
-	-webkit-border-radius: 100px;
+	display: none;
+	//background: rgba(0,0,0,0.5);
+	//-webkit-border-radius: 100px;
 }
 ::-webkit-scrollbar-thumb:vertical:active {
-	background: rgba(0,0,0,0.61); /* Some darker color when you click it */
-	-webkit-border-radius: 100px;
+	display: none;
+	//background: rgba(0,0,0,0.61); /* Some darker color when you click it */
+	//-webkit-border-radius: 100px;
 }
