--- a/src/renderer/assets/css/global.scss
+++ b/src/renderer/assets/css/global.scss
@@ -1,4 +1,8 @@
-
+//@import "~highlight.js/styles/dark.css";
+//@import "~highlight.js/styles/github.css";
+//@import "~highlight.js/styles/darkula.css";
+//@import "~codemirror/lib/codemirror.css";
+//@import "~codemirror/theme/darcula.css";
 html, body, #app {
 	font-family: "AvenirNext";
 	font-weight: 400;
