--- a/src/renderer/assets/css/global.scss
+++ b/src/renderer/assets/css/global.scss
@@ -13,6 +13,10 @@ html, body, #app {
 	padding: 0;
 	margin: 0;
 	border: 0;
+	//-webkit-user-select: none;
+	//-moz-user-select: none;
+	//-ms-user-select: none;
+	user-select: none;
 }
 
 div[role=tooltip] {
@@ -21,6 +25,7 @@ div[role=tooltip] {
 
 * {
   box-sizing: border-box;
+	outline: none;
 }
 
 /* Turn on custom 8px wide scrollbar */
